; ModuleID = '/home/carl/AnghaBench/linux/drivers/pinctrl/extr_pinctrl-pistachio.c_pistachio_gpio_irq_ack.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pinctrl/extr_pinctrl-pistachio.c_pistachio_gpio_irq_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }
%struct.pistachio_gpio_bank = type { i32 }

@GPIO_INTERRUPT_STATUS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*)* @pistachio_gpio_irq_ack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pistachio_gpio_irq_ack(%struct.irq_data* %0) #0 {
  %2 = alloca %struct.irq_data*, align 8
  %3 = alloca %struct.pistachio_gpio_bank*, align 8
  store %struct.irq_data* %0, %struct.irq_data** %2, align 8
  %4 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %5 = call %struct.pistachio_gpio_bank* @irqd_to_bank(%struct.irq_data* %4)
  store %struct.pistachio_gpio_bank* %5, %struct.pistachio_gpio_bank** %3, align 8
  %6 = load %struct.pistachio_gpio_bank*, %struct.pistachio_gpio_bank** %3, align 8
  %7 = load i32, i32* @GPIO_INTERRUPT_STATUS, align 4
  %8 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %9 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @gpio_mask_writel(%struct.pistachio_gpio_bank* %6, i32 %7, i32 %10, i32 0)
  ret void
}

declare dso_local %struct.pistachio_gpio_bank* @irqd_to_bank(%struct.irq_data*) #1

declare dso_local i32 @gpio_mask_writel(%struct.pistachio_gpio_bank*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
